--- a/resources/css/compiled/my_styles.css
+++ b/resources/css/compiled/my_styles.css
@@ -967,6 +967,63 @@
     color: #6fd64b !important;
 }
 
+.register .inputspinner {
+    position: absolute;
+    z-index: 9999999;
+    margin: 0px auto;
+    left: 0px;
+    right: 1px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 10px;
+    background-color: rgba(255, 255, 255, 0.6);
+}
+
+.register .inputspinner > div {
+    background-color: #489ee7;
+    height: 100%;
+    width: 6px;
+    display: inline-block;
+    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+    animation: sk-stretchdelay 1.2s infinite ease-in-out;
+}
+
+.register .inputspinner .rect2 {
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.register .inputspinner .rect3 {
+    -webkit-animation-delay: -1s;
+    animation-delay: -1s;
+}
+
+.register .inputspinner .rect4 {
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.register .inputspinner .rect5 {
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
+@-webkit-keyframes sk-stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+  20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes sk-stretchdelay {
+  0%, 40%, 100% { 
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% { 
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
+  }
+}
+
 @media screen {
     #printSection {
         display: none;
